[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/level_14.gd" type="Script" id=1]
[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=2]
[ext_resource path="res://Level parts/teleporter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level parts/give_out_floor.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "industrial.v2.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 176, 112, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 184, Vector2( 2, 0 ), 152, Vector2( 2, 1 ), 26, Vector2( 3, 0 ), 186, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 154, Vector2( 3, 3 ), 178, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 1 ), 128, Vector2( 4, 2 ), 146, Vector2( 4, 3 ), 146, Vector2( 4, 4 ), 146, Vector2( 5, 0 ), 146 ]
1/autotile/icon_coordinate = Vector2( 1, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "industrial.v2.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 64, 64, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 184, Vector2( 1, 2 ), 58, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 154, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 146 ]
2/autotile/icon_coordinate = Vector2( 3, 1 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "industrial.v2.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 32, 64, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 56, Vector2( 2, 0 ), 58, Vector2( 2, 1 ), 184, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 511 ]
3/autotile/icon_coordinate = Vector2( 1, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "industrial.v2.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 208, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "industrial.v2.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 64, 16 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 48, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 24, Vector2( 3, 0 ), 325 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "industrial.v2.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 352, 32, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "industrial.v2.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 208, 16, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="level_14" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="TileMap3" type="TileMap" parent="."]
position = Vector2( -32, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -32, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 1114111, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0 )

[node name="give_out_floors" type="Control" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="give_out_floor2" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 233, 251 )

[node name="give_out_floor3" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 217, 251 )

[node name="give_out_floor4" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 201, 251 )

[node name="give_out_floor5" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 185, 251 )

[node name="give_out_floor6" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 169, 251 )

[node name="give_out_floor7" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 153, 251 )

[node name="give_out_floor8" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 137, 251 )

[node name="give_out_floor9" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 121, 251 )

[node name="give_out_floor10" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 105, 251 )

[node name="give_out_floor11" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 89, 251 )

[node name="give_out_floor12" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 73, 251 )

[node name="give_out_floor13" parent="give_out_floors" instance=ExtResource( 8 )]
position = Vector2( 57, 251 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 20, 252 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 0, -252 )

[node name="air_spawn_3" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 400, -12 )

[node name="air_spawn_4" parent="cam" instance=ExtResource( 5 )]
position = Vector2( -400, 0 )

[node name="soundmaker" parent="cam" instance=ExtResource( 6 )]
position = Vector2( 12, 20 )

[node name="teleporter_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 856, 264 )

[node name="teleporter_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 792, -8 )

[node name="teleporter_3" parent="." instance=ExtResource( 3 )]
position = Vector2( 782.045, 264.841 )

[node name="teleporter_4" parent="." instance=ExtResource( 3 )]
position = Vector2( 760, 184 )

[node name="spawn_1" parent="." instance=ExtResource( 4 )]
position = Vector2( 144, 80 )

[node name="spawn_2" parent="." instance=ExtResource( 4 )]
position = Vector2( 496, 400 )

[node name="spawn_3" parent="." instance=ExtResource( 4 )]
position = Vector2( 496, 80 )

[node name="spawn_4" parent="." instance=ExtResource( 4 )]
position = Vector2( 144, 400 )

[node name="spawn_5" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 244 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 320, 240 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( -352, 200, -368, 200, -368, 216, -432, 216, -432, 200, -448, 200, -448, 136, -432, 136, -432, 120, -368, 120, -368, 136, -352, 136, -352, 168, -240, 168, -240, 20, -272, 20, -452, -80, -456, 220, -404, 416, 248, 416, 248, -80, -336, -80, -452, -80, -316, -8, -272, 20, -272, -12, -240, -12, -240, 20, 80, 20, 80, -12, 112, -12, 112, 20, 80, 20, 80, 308, 112, 308, 112, 340, 80, 340, 80, 308, -240, 308, -240, 340, -272, 340, -272, 308, -240, 308, -240, 184, -352, 184 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -76, -60 )
polygon = PoolVector2Array( 76, 308, -244, 308, -244, 184, -200, 184, -148, 184, -148, 232, -20, 232, -20, 104, -148, 104, -148, 168, -244, 168, -244, 20, 76, 20 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
